# yatzhee

./: .gitignore  IMPROVEMENT_PLAN.md  Makefile  README.md  pyproject.toml  requirements.txt  yahtzee.py
.github/workflows/: tests.yml
src/yahtzee/: __init__.py  ai.py  constants.py  game.py  i18n.py  persistence.py  scoring.py  settings.py  sound.py  theme.py
src/yahtzee/ui/: __init__.py  app.py  tooltip.py  widgets.py
tests/: conftest.py  test_ai.py  test_game.py  test_i18n.py  test_persistence.py  test_scoring.py  test_sound.py  test_ui.py  test_validation.py
